--- a/app/index.html
+++ b/app/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
     <title>People Counter</title>
+    <link rel="stylesheet" type="text/css" href="style/main.css">
     <script defer src="node_modules/fxos-web-server/dist/fxos-web-server.js"></script>
     <script defer src="js/app.js"></script>
   </head>
