--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
     <h1>People Counter</h1>
     <h3>People Number: <span id="peopleNumber">0</span></h3>
     <button id="add">+1</button>
+    <button id="subtract">-1</button>
     <h3>Status: <span id="status">Stopped</span></h3>
     <div>IP Address: <span id="ip"></span></div>
     <div>Port: <span id="port"></span></div>
