--- a/app/index.html
+++ b/app/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <h1>People Counter</h1>
-    <h2>People Number: <span id="peopleNumber">0</span></h2>
+    <h2>People Number: <span id="peopleNumber">0</span>/100</h2>
     <button id="add" disabled>+1</button>
     <button id="subtract" disabled>-1</button>
     <h3>Status: <span id="status">Stopped</span></h3>
